Move qtip styles into a separate CSS file. Semi-fix qtip for IE7. Still minor display issues on the right-hand side, but content is at least visible.

--- a/www/templates/html/css/majors.css
+++ b/www/templates/html/css/majors.css
@@ -196,79 +196,3 @@ a.top {
 #maincontent table p {
     margin:0;
 }
-
-/********************************************
-
-Course qTip Styles
-
-*********************************************/
-
-.course-qtip {
-	color:#494949;
-	font-size:80%;
-	font-style:normal;
-	font-family: "Lucida Grande",Verdana,Arial;
-	font-variant:normal;
-	font-weight:normal;
-	line-height:110%;
-	text-align:left;
-	margin-bottom:20px;	
-	max-width:650px;
-}
-.course-qtip .qtip-defaults {
-	border:3px;
-	-moz-border-radius:5px;	
-}
-.course-qtip .qtip-wrapper {
-    border:3px solid #c8c8c8;
-    -moz-border-radius:3px;
-    -webkit-border-radius:3px;
-    border-radius:3px;
-}
-.course-qtip .qtip-contentWrapper {
-	min-height:100px;
-	background:#fff;
-}
-.course-qtip .qtip-content {padding:9px;overflow:scroll;}
-.course-qtip .qtip-tip {
-	z-index:999999;
-}
-.course-qtip .qtip-tip[rel=bottomleft] + .qtip-wrapper {
-	-moz-border-radius-bottomleft: 0;
-	-webkit-border-bottom-left-radius: 0;
-}
-.course-qtip .qtip-tip[rel=topleft] + .qtip-wrapper {
-	-moz-border-radius-topleft: 0;
-	-webkit-border-top-left-radius: 0;
-}
-.course-qtip .qtip-tip[rel=bottomright] + .qtip-wrapper {
-	-moz-border-radius-bottomright: 0;
-	-webkit-border-bottom-right-radius: 0;
-}
-.course-qtip .qtip-tip[rel=topright] + .qtip-wrapper {
-	-moz-border-radius-topright: 0;
-	-webkit-border-top-right-radius: 0;
-}
-.course-qtip .title a {display:none;}
-.course-qtip .subjectCode {margin-top:11px;min-width:60px;top:-3px;margin-left:2px;}
-.course-qtip .number {
-	margin:-14px 5px 0 0;
-	min-width:60px;
-	padding:19px 0 7px;
-}
-.course-qtip .course .title {
-	background:#f5f5f5;
-	margin:-8px -10px 0 -10px;
-	padding:7px 5px 4px 82px;
-	border-bottom:1px solid #e7e7e7;
-	font-size:150%;
-}
-.course-qtip  dt, .course-qtip  dd {
-	font-size:80%;
-	margin:0;
-}
-.course-qtip .course .prereqs, .course-qtip .course .notes, .course-qtip .course .description {
-	width:60%;
-}
-.course-qtip .course .prereqs a {color:#0F900A; text-decoration:underline;}
-.course-qtip .course .prereqs a:hover, .course-qtip .course .prereqs a:focus {color:#28aa23 !important; text-decoration:none;}
